src/Services/kubernetes/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  strategy: {}
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - image: account
          imagePullPolicy: Never
          name: account
          ports:
            - containerPort: 5000
          resources: {}
      hostAliases:
        - ip: "192.168.99.100" #Minikube ip
          hostnames:
            - "stock-web-app.com"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
