src/Services/kubernetes/bank-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank-db
  name: bank-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-db
  template:
    metadata:
      labels:
        app: bank-db
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: 'Y'
            - name: MSSQL_SA_PASSWORD
              value: Passw0rd
            - name: SA_PASSWORD
              value: Passw0rd
          image: mcr.microsoft.com/mssql/server:2017-CU19-ubuntu-16.04
          name: bank-db
          ports:
            - containerPort: 1433
          resources: {}
          volumeMounts:
            - mountPath: /var/opt/mssql/
              name: bank-db-data
            - mountPath: /var/opt/mssql/data
              name: bank-db-claim1
      restartPolicy: Always
      serviceAccountName: ''
      volumes:
        - name: bank-db-data
          persistentVolumeClaim:
            claimName: bank-db-data
        - name: bank-db-claim1
          persistentVolumeClaim:
            claimName: bank-db-claim1
status: {}
