src/Services/kubernetes/bank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank
  name: bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank
  strategy: {}
  template:
    metadata:
      labels:
        app: bank
    spec:
      containers:
        - image: brunton/bank
          imagePullPolicy: Always
          name: bank
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
      serviceAccountName: ''
      volumes: null
status: {}
