src/Services/kubernetes/web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        app: web-app
    spec:
      containers:
        - image: web-app
          imagePullPolicy: Never
          name: web-app
          ports:
            - containerPort: 80
          resources: {}
      hostAliases:
        - ip: "192.168.99.100" #Minikube ip
          hostnames:
            - "stock-web-app.com"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
