src/Services/kubernetes/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
  name: account
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: "80"
      port: 80
      targetPort: 80
  selector:
    app: account
status:
  loadBalancer: {}
