src/Services/kubernetes/bank-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bank-db
  name: bank-db
spec:
  ports:
    - name: '1434'
      port: 1434
      targetPort: 1433
  selector:
    app: bank-db
status:
  loadBalancer: {}
