src/Services/kubernetes/bank-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bank
  name: bank
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: "80"
      port: 80
      targetPort: 80
  selector:
    app: bank
status:
  loadBalancer: {}
