src/Services/kubernetes/stockmarket-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stockmarket
  name: stockmarket
spec:
  type: LoadBalancer
  ports:
    - name: '80'
      port: 80
      targetPort: 80
  selector:
    app: stockmarket
status:
  loadBalancer: {}
