src/Services/kubernetes/tax-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tax
  name: tax
spec:
  ports:
    - name: '5003'
      port: 5003
      targetPort: 80
  selector:
    app: tax
status:
  loadBalancer: {}
