src/Services/kubernetes/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-db
  name: user-db
spec:
  ports:
    - name: '1433'
      port: 1433
      targetPort: 1433
  selector:
    app: user-db
status:
  loadBalancer: {}
