src/Services/kubernetes/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: web-app
status:
  loadBalancer: {}
